# LangChain-Agentic

./: README.md  pyproject.toml
1-pydantic/: intro.ipynb
Langchain/1-langchain/: gettingstarted.ipynb
Langchain/1-langchain/DataIngestion/: DataIngestion.ipynb
Langchain/1-langchain/Embedding/: embedding_huggingface.ipynb  embedding_ollama.ipynb  embedding_openai.ipynb
Langchain/1-langchain/TextSplitting/: HTMLtextSplitting.ipynb  JSONtextSplitting.ipynb  TextSplitting.ipynb  openapi.json  speech.txt
Langchain/1-langchain/vectordbs/: FAISS.ipynb
