[project]
name = "demouv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
]
